# PHISE

./: .buildinfo  .gitignore  .readthedocs.yaml  Kernel_Nulling_Matrix.ipynb  Mindmap.xmind  README.md  analytical_demo.ipynb  analytical_model.ipynb  environment.yml  formal_demos.ipynb  good_to_know.ipynb  index.html  kernel_null_tests.ipynb  kernel_nulling_model.ipynb  modules.html  numerical_model.ipynb  numerical_simulation.ipynb  objects.inv  plan.html  plan.ipynb  py-modindex.html  pyproject.toml  random_test.ipynb  rapport_activite.ipynb  requirements.txt  searchindex.js  tests.ipynb  transfer_functions.ipynb
.doctrees/: environment.pickle  index.doctree  modules.doctree
.github/workflows/: docs.yml  publish-pypi.yml
docs/: .$kernel_scheme_horizontal.drawio.bkp  Slides.pptx  Template.potx  abstract.aux  abstract.fdb_latexmk  abstract.fls  abstract.tex  kernel_scheme.excalidraw  kernel_scheme_horizontal.drawio  plan.md
docs/Abstract SF2A (2024)/: abstract.fdb_latexmk  abstract.fls  abstract.tex
docs/Abstract SPIE (2024)/: abstract.aux  abstract.fdb_latexmk  abstract.fls  abstract.tex
docs/Paper - Calibration/: aa.bst  aanda.aux  aanda.fdb_latexmk  aanda.fls  aanda.tex  readme.txt
docs/Poster/: Poster.pptx  (+7 more)
lab/: alignment_procedure.ipynb  logbook.ipynb
model_v0/: analytic.ipynb  kernel_nuller.py  numeric.ipynb  symbolic.ipynb  utils.py
src/: LRFutils.py  __init__.py  body.py  coordinates.py  demonstration.py  discrete_field.py  field.py  instrument.py  kernel_nuller.py  mmi.py  phase.py  scene.py  signals.py  telescope.py  test.py  utils.py
(+169 files in other folders)
